#386 border and removable were added to photo attachments

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/tool/attachments/resource/FotoDisplayWidgetItem.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/tool/attachments/resource/FotoDisplayWidgetItem.html
@@ -1,6 +1,8 @@
-<div class="image">
+<div class="image {% if removable %}web{% endif %}">
     <div class="imgWrapper" title="{{title}}">
         <img src="{{url}}"/>
     </div>
+    {% if removable %}
     <div class="remove"></div>
+    {% endif %}
 </div>
