#419 tittle was added to docs tiles

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/tool/attachments/resource/DocDisplayWidgetItem.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/tool/attachments/resource/DocDisplayWidgetItem.html
@@ -1,5 +1,6 @@
 <div class="file {% if removable %}web{% endif %}">
     <a class="fileWrapper" href="{{url}}" title="{{title}}">
+        <div class="title">{{title}}</div>
         <div class="extension">{{extension}}</div>
     </a>
     {% if removable %}
