#508 uploading files functionality was implemented

--- a/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/CreateAcceptedPartDialog/CreateAcceptedPartDialog.html
+++ b/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/CreateAcceptedPartDialog/CreateAcceptedPartDialog.html
@@ -1,4 +1,4 @@
-<div>
+<div id="createAcceptedPartDialog">
 
     <div class="dijitDialogPaneContentArea">
         <div data-dojo-attach-point="contentNode" class="cd-contentNode">
@@ -7,6 +7,7 @@
                 <input data-field="acceptor" data-dojo-type="dijit/form/TextBox" title="Принял"/>
                 <input data-field="subcontr_name" data-dojo-type="dijit/form/TextBox" title="Субподрядчик"/>
                 <input data-field="comment" data-dojo-type="dijit/form/TextBox" title="Комментарий"/>
+                <div id="ap_files" class="dropzone" data-dojo-type="dijit/form/Form" title="Файлы"></div>
             </div>
         </div>
     </div>
