#508 icon-cancel-circled2 was added

--- a/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/css/fontello/demo.html
+++ b/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/css/fontello/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?19252785');
-      src: url('./font/fontello.eot?19252785#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?19252785') format('woff'),
-           url('./font/fontello.ttf?19252785') format('truetype'),
-           url('./font/fontello.svg?19252785#fontello') format('svg');
+      src: url('./font/fontello.eot?28139417');
+      src: url('./font/fontello.eot?28139417#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?28139417') format('woff'),
+           url('./font/fontello.ttf?28139417') format('truetype'),
+           url('./font/fontello.svg?28139417#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -302,8 +302,11 @@ body {
     <div id="icons" class="container">
       <div class="row">
         <div title="Code: 0x2b" class="the-icons span3"><i class="demo-icon icon-plus">&#x2b;</i> <span class="i-name">icon-plus</span><span class="i-code">0x2b</span></div>
+        <div title="Code: 0xe04d" class="the-icons span3"><i class="demo-icon icon-cancel-circled2">&#xe04d;</i> <span class="i-name">icon-cancel-circled2</span><span class="i-code">0xe04d</span></div>
         <div title="Code: 0xe09d" class="the-icons span3"><i class="demo-icon icon-eye">&#xe09d;</i> <span class="i-name">icon-eye</span><span class="i-code">0xe09d</span></div>
         <div title="Code: 0xe102" class="the-icons span3"><i class="demo-icon icon-eye-off">&#xe102;</i> <span class="i-name">icon-eye-off</span><span class="i-code">0xe102</span></div>
+      </div>
+      <div class="row">
         <div title="Code: 0xf0f6" class="the-icons span3"><i class="demo-icon icon-doc-text">&#xf0f6;</i> <span class="i-name">icon-doc-text</span><span class="i-code">0xf0f6</span></div>
       </div>
     </div>
