#509 disabling filter input by default was applied

--- a/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/AcceptedPartsPanel.html
+++ b/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/AcceptedPartsPanel.html
@@ -16,6 +16,7 @@
         <span data-dojo-type="dijit/ToolbarSeparator"></span>
 
         <input data-dojo-type="dijit/form/TextBox"
+               disabled="disabled"
                data-dojo-attach-point="acceptedPartsFilter"
                type="text"
                placeHolder="Фильтр"
