#520 undoFirstPoint button was added

--- a/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/AcceptedPartsPanel.html
+++ b/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/AcceptedPartsPanel.html
@@ -9,6 +9,12 @@
              data-dojo-attach-point="createAcceptedPartToggle"
              data-dojo-props="iconClass:'icon icon-plus', showLabel:false, disabled: 'disabled'">Cut
         </div>
+
+        <div data-dojo-type="dijit/form/Button"
+             data-dojo-attach-point="undoFirstPoint"
+             data-dojo-props="iconClass:'icon icon-undo', showLabel:false, disabled: 'disabled'">Cut
+        </div>
+
         <div data-dojo-type="dijit/form/ToggleButton"
              data-dojo-attach-point="acceptedPartsLayerToggle"
              data-dojo-props="iconClass:'icon icon-eye-off', showLabel:false, disabled: 'disabled'">Bold
