--- a/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/AcceptedPartsPanel.html
+++ b/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/AcceptedPartsPanel.html
@@ -25,7 +25,7 @@
                disabled="disabled"
                data-dojo-attach-point="acceptedPartsFilter"
                type="text"
-               placeHolder="Фильтр"
+               placeHolder="Поиск"
                value=""/>
     </div>
     <div data-dojo-attach-point="acceptedPartsTable"
