--- a/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/AcceptedPartsPanel.html
+++ b/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/AcceptedPartsPanel.html
@@ -7,7 +7,7 @@
 
         <div data-dojo-type="dijit/form/ToggleButton"
              data-dojo-attach-point="createAcceptedPartToggle"
-             data-dojo-props="iconClass:'icon icon-plus', showLabel:false, disabled: 'disabled'">Создать принятый участок
+             data-dojo-props="iconClass:'icon icon-plus', showLabel:false, disabled: 'disabled'">Отметить принятый участок
         </div>
 
         <div data-dojo-type="dijit/form/Button"
