--- a/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/AcceptedPartsPanel.html
+++ b/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/AcceptedPartsPanel.html
@@ -6,19 +6,25 @@
          data-dojo-props="region: 'top'">
 
         <div data-dojo-type="dijit/form/ToggleButton"
+             data-dojo-attach-point="acceptedPartsLayerToggle"
+             data-dojo-props="iconClass:'icon icon-eye-off', showLabel:false, disabled: 'disabled'">
+            Показать/скрыть слой
+        </div>
+
+        <span data-dojo-type="dijit/ToolbarSeparator"></span>
+
+        <div data-dojo-type="dijit/form/ToggleButton"
              data-dojo-attach-point="createAcceptedPartToggle"
-             data-dojo-props="iconClass:'icon icon-plus', showLabel:false, disabled: 'disabled'">Отметить принятый участок
+             data-dojo-props="iconClass:'icon icon-plus', showLabel:false, disabled: 'disabled'">
+            Отметить принятый участок
         </div>
 
         <div data-dojo-type="dijit/form/Button"
              data-dojo-attach-point="undoFirstPoint"
-             data-dojo-props="iconClass:'icon icon-undo', showLabel:false, disabled: 'disabled'">Отменить точку
+             data-dojo-props="iconClass:'icon icon-undo', showLabel:false, disabled: 'disabled'">
+            Отменить точку
         </div>
 
-        <div data-dojo-type="dijit/form/ToggleButton"
-             data-dojo-attach-point="acceptedPartsLayerToggle"
-             data-dojo-props="iconClass:'icon icon-eye-off', showLabel:false, disabled: 'disabled'">Показать/скрыть слой
-        </div>
         <span data-dojo-type="dijit/ToolbarSeparator"></span>
 
         <input data-dojo-type="dijit/form/TextBox"
