#604 #552 fixed columns width

--- a/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/AcceptedPartsPanel.html
+++ b/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/AcceptedPartsPanel.html
@@ -35,5 +35,6 @@
                value=""/>
     </div>
     <div data-dojo-attach-point="acceptedPartsTable"
+         class="accepted-parts-table"
          style="position: absolute; display: block; top: 46px; bottom: 0; left: 0; right: 0;height: auto;"></div>
 </div>
