--- a/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/AcceptedPartsPanel.html
+++ b/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/AcceptedPartsPanel.html
@@ -8,7 +8,7 @@
         <div data-dojo-type="dijit/form/ToggleButton"
              data-dojo-attach-point="acceptedPartsLayerToggle"
              data-dojo-props="iconClass:'icon icon-eye-off', showLabel:false">
-            Вкл / откл отображения принятых участков на карте
+            Вкл / откл отображение принятых участков на карте
         </div>
 
         <span data-dojo-type="dijit/ToolbarSeparator"></span>
